# context-manga-translator

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  docker-compose.yml
.cargo/: config.toml
.claude/: settings.json
.github/: labeler.yml
.github/workflows/: pr.yml
crates/koharu-app/: Cargo.toml
crates/koharu-app/src/: config.rs  google_fonts.rs  lib.rs  llm.rs  renderer.rs  services.rs
crates/koharu-core/src/: events.rs  lib.rs  op.rs  protocol.rs  scene.rs
crates/koharu-llm/src/: prompt.rs
crates/koharu-ml/src/: bubble_contour.rs  lib.rs
crates/koharu-renderer/src/: layout.rs
docs/: zensical.ja-JP.toml  zensical.pt-BR.toml  zensical.toml  zensical.zh-CN.toml
docs/benchmarks/: unlimited-ocr.md
docs/en-US/contribute/: development.md  introduction.md
docs/en-US/explanation/: models-and-providers.md
docs/en-US/how-to/: build-from-source.md  configure-mcp-clients.md  index.md  install-koharu.md  run-gui-headless-and-mcp.md  troubleshooting.md  use-codex-image-generation.md  use-openai-compatible-api.md
docs/en-US/reference/: cli.md  http-api.md  keyboard-shortcuts.md  mcp-tools.md  settings.md
docs/ja-JP/contribute/: development.md  introduction.md
docs/ja-JP/explanation/: models-and-providers.md
docs/ja-JP/how-to/: build-from-source.md  configure-mcp-clients.md  index.md  install-koharu.md  run-gui-headless-and-mcp.md  troubleshooting.md  use-codex-image-generation.md  use-openai-compatible-api.md
docs/ja-JP/reference/: cli.md  http-api.md  keyboard-shortcuts.md  mcp-tools.md  settings.md
docs/pt-BR/contribute/: development.md  introduction.md
docs/pt-BR/how-to/: index.md  (+7 more)
plans/: koharu_milestone_1_context_aware_translation.md  koharu_milestone_2_ocr_metadata_quality.md  koharu_milestone_3_full_unlimited_ocr.md  koharu_milestone_4_smart_fallback.md  koharu_milestone_5_context_metadata.md  koharu_milestone_6_ui.md  koharu_unlimited_ocr_context_translation_plan.md
services/anytext2/: .gitignore  Dockerfile  bootstrap.ps1  download_models.py  pyproject.toml  schemas.py  server.py  server.py.bak  test.html
services/anytext2/models_yaml/: anytext2_sd15.yaml
services/unlimited-ocr/: Dockerfile  README.md  requirements.txt  run.ps1  run.sh  schemas.py  server.py
tests/: text-render-contract.html
tests/integration-tests/: Cargo.toml
ui/: instrumentation-client.ts  next.config.ts  openapi.json  orval.config.ts  package.json
ui/app/: layout.tsx
ui/components/: ActivityBubble.tsx  MenuBar.tsx  Panels.tsx  SettingsDialog.tsx
ui/hooks/: useCanvasDrawing.ts
ui/lib/: events.ts  pipeline.ts
(+193 files in other folders)
