[project]
name = "koharu-anytext2"
version = "0.1.0"
description = "AnyText2 render sidecar for Koharu"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "Pillow>=10.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    # ms_wrapper is a single-file module; installed separately via:
    #   git clone https://github.com/tyxsspa/anytext2.git
    #   pip install ./anytext2   (copies ms_wrapper.py + dependencies)
    # Or set ANYTEXT2_REPO_DIR=path/to/anytext2 and import from there.
]

[tool.uv]
dev-dependencies = []
