[project]
name = "koharu-anytext2"
version = "0.1.0"
description = "AnyText2 render sidecar for Koharu"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
]

[tool.uv.sources]
torch = { index = "pytorch-gpu" }
torchvision = { index = "pytorch-gpu" }

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv]
# CUDA 12.4 torch by default. For CPU-only:
#   UV_INDEX_PYTORCH="https://download.pytorch.org/whl/cpu" uv sync --no-build
