[project]
name = "koharu-anytext2"
version = "0.1.0"
description = "AnyText2 render sidecar for Koharu"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "Pillow>=9.0.0,<10.0.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "einops>=0.8.0",
    "safetensors>=0.4.0",
    "modelscope>=1.15.0",
    "addict>=2.4.0",
    "scipy>=1.13.0",
    "omegaconf>=2.3.0",
    "transformers>=4.44.0,<4.49.0",
    "huggingface-hub>=0.24.0",
    "ujson>=5.10.0",
    "opencc-python-reimplemented>=0.1.7",
    "easydict>=1.13",
    "scikit-image>=0.24.0",
    "datasets>=3.0.0",
    "diffusers>=0.30.0",
    "pytorch-lightning==1.9.5",
    "open-clip-torch>=2.24.0",
]

[tool.uv.sources]
torch = { index = "pytorch-gpu" }
torchvision = { index = "pytorch-gpu" }

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv]
# CUDA 12.4 torch by default. For CPU-only:
#   UV_INDEX_PYTORCH="https://download.pytorch.org/whl/cpu" uv sync --no-build
